# RecFlex

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  copyright.py  post_install.sh  setup.py
HugeCTR/: README.md  benchmark_hugectr.py  e2e_stats.sh  prof_kernel.py  run.sh  stats.sh
RecFlex/: __init__.py  cuda_helper.py  parser.py  rec_modules.py  task_manager.py  utils.py
RecFlex/sched_basic_csrc/: CMakeLists.txt  gpu_pointers_array.cc  task_mapping.cu  utils.cu
RecFlex/sched_basic_csrc/include/: gpu_pointers_array.h  task_mapping.cuh  task_sync.cuh  utils.cuh
SC_artifact/: Dockerfile  TF.Dockerfile  datagen.sh  plot.sh  run_all.sh  run_hugectr.sh  run_recflex.sh  run_tf_recom.sh  run_torchrec.sh
TensorFlow/: benchmark_tensorflow.py  e2e_stats.sh  prepare.sh  prof_kernel.py  run_recom.sh  run_tf.sh  stats.sh
TorchRec/: benchmark_torchrec.py  e2e_stats.sh  prof_kernel.py  run.sh
data_synthesis/: README.md  data_generate.py  table_config_generate.py
examples/: compress.py  decompress.py  end_to_end.py  run_e2e.sh  run_fixed_thread.sh  run_model.sh  run_naive.sh  schedule_config_gen.py  test.py  test.sh  tune.py
examples/csrc/: CMakeLists.txt  multi_block_per_sample_preprocess.cu  one_block_multi_sample_preprocess.cu  onehot_preprocess.cu  warp_per_sample_preprocess.cu
examples/csrc/include/: aligned_vector.cuh  multi_block_per_sample_kernel.cuh  multi_block_per_sample_preprocess.cuh  one_block_multi_sample_kernel.cuh  one_block_multi_sample_preprocess.cuh  onehot_kernel.cuh  onehot_preprocess.cuh  reduce_by_key_kernel.cuh  reduce_by_key_preprocess.cuh  warp_per_sample_kernel.cuh  warp_per_sample_preprocess.cuh
microbenchmark/: branch_latency.py  fence_schedule.py  sleep_schedule.py
plots/: e2e.py  e2e_ABC.py  e2e_DE.py  effective.py  fixed_thread_binding.py  (+8 more)
(+40 files in other folders)
